tdf#117991 let focus change get processed before selection change

Change-Id: I78999730bc942733d7498415d920d94f2422ac6f